--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ canvas{
   padding-right:100px;
   color:#ff9900;
   font-weight:bold;
+  font-size:34px;   /* ← ここを追加（今の約2倍） */
 }
 
 @keyframes tickerScroll{
