--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@ border-bottom:2px solid #ff9900;
   font-weight:bold;
   text-align:center;
   width:100%;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:10px;   /* ← これが超重要 */
 }
 .bigOrukan{
   font-size:10vw;
@@ -88,15 +92,16 @@ border-bottom:2px solid #ff9900;
   display:flex;
   flex-direction:column;
   align-items:center;
+  gap:10px;   /* ← これを追加 */
 }
 
-.orukanChange{
-  margin-top:10px;
+.fxChange,
+.orukanChange span{
+  font-size:clamp(36px, 5vw, 64px);
+  font-weight:bold;
 }
 
-#fxInfo{
-  margin-top:10px;
-}
+
 
 .priceFlashUp{
   color:#00ff00 !important;
@@ -217,11 +222,10 @@ canvas{
 <div id="page_clock" class="page active">
   <div class="panel" style="display:flex;align-items:center;justify-content:center;flex-direction:column;">
 
-    <div class="bigFX">
-      USD/JPY <span id="price">取得中…</span>
-    </div>
-
-<div id="fxInfo"></div>
+<div class="bigFX">
+  <div>USD/JPY <span id="price">取得中…</span></div>
+  <div id="fxInfo"></div>
+</div>
 
 <div class="bigOrukan" id="orukanInfo">
   <div class="orukanPrice"></div>
@@ -488,7 +492,7 @@ const arrow = up ? "▲" :
    </span> ◆ `;
 
 document.getElementById("fxInfo").innerHTML =
-  `<span style="color:${color};font-size:28px;font-weight:bold;">
+  `<span class="fxChange" style="color:${color};">
     ${arrow}${Math.abs(percent).toFixed(2)}%
    </span>`;
 
@@ -606,7 +610,7 @@ orukanEl.querySelector(".orukanPrice").innerText =
   "推算ｵﾙｶﾝ " + orukanEstimated.toFixed(0);
 
 orukanEl.querySelector(".orukanChange").innerHTML =
-  `<span style="color:${color};font-size:28px;font-weight:bold;">
+  `<span class="fxChange" style="color:${color};">
    ${arrow}${Math.abs(orukanDiffPercent).toFixed(2)}%
    </span>`;
 }
