--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@ color:#e6e6e6;
 font-family:Arial,Helvetica,sans-serif;
   height:100%;
 }
-body{display:flex;height:100vh;overflow:hidden;}
+body{
+  display:flex;
+  min-height:100vh;   /* ← heightをやめる */
+  overflow:hidden;
+}
 
 #leftmenu{
 width:clamp(70px,8vh,140px);
@@ -42,7 +46,8 @@ border-right:2px solid #ff9900;
   display:flex;
   flex-direction:column;
   min-width:0;
-  min-height:0;   /* ← 追加 */
+  min-height:0;
+  height:100dvh;   /* ← ここが決定打 */
 }
 
 #topbar{
