--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@ border-right:2px solid #ff9900;
   display:flex;
   flex-direction:column;
   min-width:0;
-  min-height:0;
-  height:100dvh;   /* ← ここが決定打 */
+  min-height:0; /* ← ここが決定打 */
 }
 
 #topbar{
-  height:8vh;
+   height:70px;      /* 固定px */
+  flex-shrink:0;
 background:#141414;
 border-bottom:2px solid #ff9900;
   display:flex;
@@ -202,11 +202,11 @@ canvas{
   background:#111;
   border:1px solid #ff9900;
   width:100%;
-  height:30vh;
+  height:100%;
 }
 
 #fxChart{
-  height:30vh !important;
+  height:100% !important;
   max-height:none;
   flex-shrink:0;
 }
@@ -216,7 +216,8 @@ canvas{
 
 
 #ticker{
-  height:6vh;
+  height:60px;      /* 固定pxにする */
+  flex-shrink:0;
   background:#111;
   border-top:2px solid #ff9900;
   overflow:hidden;
