--- a/index.html
+++ b/index.html
@@ -283,6 +283,17 @@ canvas{
     word-break:keep-all;              /* ← 追加 */
 }
 
+ .rightInfo{
+    position:relative;
+  }
+
+  .updatedTime{
+    position:absolute;
+    bottom:10px;
+    right:10px;
+    margin-top:0;
+}
+
 
  
 }
