--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@ border-bottom:2px solid #ff9900;
 .rightInfo{
   display:flex;
   flex-direction:column;
-  justify-content:center;
+  justify-content:flex-start;  /* ← center禁止 */
   gap:20px;
   flex:1;
   min-width:0;
+  min-height:0;
 }
 
 
@@ -145,8 +146,8 @@ border-bottom:2px solid #ff9900;
   flex-direction:column;
   align-items:center;
   justify-content:flex-start;
-  min-height:0;   /* ← これ追加 */
-  overflow:hidden;
+  min-height:0;
+  overflow:visible;   /* ← ここだけ変更 */
 }
 
 .priceFlashUp{
@@ -291,7 +292,7 @@ canvas{
 .rightInfo{
   display:flex;
   flex-direction:column;
-  justify-content:flex-start;   /* ← centerをやめる */
+  justify-content:flex-start;  /* ← center禁止 */
   gap:20px;
   flex:1;
   min-width:0;
