--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ border-bottom:2px solid #ff9900;
 }
 
 .page{
-  position:relative;   /* ← absolute をやめる */
+  position:relative;   /* ← absolute をやめる */  min-height:100%; 
   padding:20px;
   box-sizing:border-box;
   display:flex;
@@ -265,6 +265,7 @@ canvas{
   .page{
     flex-direction:row;
     overflow:hidden;
+      min-height:100%; 
   }
 
   .fxPanel{
