--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ font-family:Arial,Helvetica,sans-serif;
 body{
   display:flex;
   min-height:100vh;   /* ← heightをやめる */
-  overflow:hidden;
+  overflow:visible;  
 }
 
 #leftmenu{
@@ -71,7 +71,7 @@ border-bottom:2px solid #ff9900;
 #pages{
   position:relative;
   flex:1;
-  overflow:hidden;
+  overflow:visible;  
   min-height:0;   /* ← 追加 */
 }
 
@@ -226,7 +226,7 @@ canvas{
   flex-shrink:0;
   background:#111;
   border-top:2px solid #ff9900;
-  overflow:hidden;
+  overflow:visible;  
   position:relative;
 }
 
@@ -264,7 +264,7 @@ canvas{
 
   .page{
     flex-direction:row;
-    overflow:hidden;
+    overflow:visible;  
       min-height:100%; 
   }
 
